# AI-Powered-Job-Recommender-System-with-MCP

./: .gitignore  README.md  app.py  main.py  mcp_server.py  pyproject.toml  requirements.txt
src/: helper.py  job_api.py
