[project]
name = "ai-powered-job-recommender-system-with-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify>=2.7.0",
    "apify-client>=1.12.0",
    "groq>=0.30.0",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
]
